ci: add ktlint to CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,12 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       - name: Test with Gradle
         run: ./gradlew test
+  ktlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: yutailang0119/action-ktlint@v4
+        with:
+          report-path: build/*.xml
+          ignore-warnings: true
+        continue-on-error: false
